--- a/.github/workflows/cloudflare-renew.yaml
+++ b/.github/workflows/cloudflare-renew.yaml
@@ -1,30 +1,91 @@
-name: Renew Domains
+name: Cloudflare SSL Certificates
 
 on:
-  schedule:
-    - cron: '0 0 1 1 *' # 每年1月1日00:00
+  schedule: # execute every 24 hours
+    - cron: "35 6 * * *"
+  workflow_dispatch:
+
+env:
+    ACME: /home/runner/.acme.sh/acme.sh
+    CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+    CF_TOKEN: ${{ secrets.CF_TOKEN }}
+    EMAIL: ${{ secrets.EMAIL }}
 
 jobs:
-  renew:
+  build:
     runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' || github.event.repository.owner.id == github.event.sender.id
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '14'
-
-    - name: Install Cloudflare CLI
-      run: npm install -g cloudflare-cli
-
-    - name: Renew Domains
-      env:
-        CF_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
+    - name: Checkout
+      uses: actions/checkout@v4
+    - name: Install & Configure acme.sh
       run: |
-        cfcli login --api-token $CF_API_TOKEN
-        while IFS= read -r domain; do
-          cfcli renew "$domain" --api-token=$CF_API_TOKEN --account-id=$CF_ACCOUNT_ID
-        done < $GITHUB_WORKSPACE/domains.txt
+        curl  https://get.acme.sh | sh -s email=$EMAIL
+    - name: Issue & Deploy Certificates
+      run: |
+        export CF_Account_ID=$CF_ACCOUNT_ID
+        export CF_Token=$CF_TOKEN
+
+        git config --global user.email $EMAIL
+        git config --global user.name acme
+
+        check_certificate_validity() {
+          cert_path=$1
+          if [ -f "$cert_path" ]; then
+            if openssl x509 -checkend $(( 60 * 86400 )) -noout -in "$cert_path"; then
+              echo "Certificate at $cert_path is valid for more than 60 days, skipping..."
+              return 0
+            else
+              return 1
+            fi
+          else
+            return 1
+          fi
+        }
+
+        issue_and_install_certificate() {
+          domain=$1
+          cert_type=$2
+          acme_server=$3
+          keylength=$4
+
+          cert_path="./ssl/$domain"
+          [ "$cert_type" = "RSA" ] && cert_path="$cert_path/rsa"
+          cert_file="$cert_path/$domain.cer"
+          key_file="$cert_path/$domain.key"
+
+          issue_status=0
+          $ACME --issue --server $acme_server --debug --dns dns_cf -d "$domain" -d "*.$domain" ${keylength:+--keylength $keylength} || issue_status=$?
+          if [ $issue_status -ne 0 ]; then
+            echo "Failed to issue $cert_type certificate for $domain, skipping..."
+            return
+          fi
+
+          install_status=0
+          $ACME --installcert -d "$domain" --key-file "$key_file" --fullchain-file "$cert_file" || install_status=$?
+          if [ $install_status -ne 0 ]; then
+            echo "Failed to install $cert_type certificate for $domain, skipping..."
+            return
+          fi
+
+          TIMESTAMP=$(date +"%Y-%m-%d %H:%M:%S")
+          git add $cert_path/
+          git commit -m "Update $cert_type certificate files for $domain at $TIMESTAMP"
+        }
+
+        while IFS= read -r domain || [ -n "$domain" ]; do
+          mkdir -p "./ssl/$domain/rsa"
+
+          if ! check_certificate_validity "./ssl/$domain/$domain.cer"; then
+            issue_and_install_certificate "$domain" "EC" "letsencrypt" ""
+          fi
+
+          if ! check_certificate_validity "./ssl/$domain/rsa/$domain.cer"; then
+            issue_and_install_certificate "$domain" "RSA" "letsencrypt" "3072"
+          fi
+
+        done < cloudflare_domains_list.txt
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
