--- a/.github/workflows/cloudflare-renew.yaml
+++ b/.github/workflows/cloudflare-renew.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-    ACME: /home/runner/.acme.sh/acme.sh
+    ACME_DIR: $HOME/.acme.sh
     CF_ACCOUNT_ID: ${{ secrets.CF_ACCOUNT_ID }}
     CF_TOKEN: ${{ secrets.CF_TOKEN }}
     EMAIL: ${{ secrets.EMAIL }}
@@ -19,21 +19,27 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y curl tar
+
     - name: Install & Configure acme.sh
       run: |
-        curl https://get.acme.sh | sh -s email=${{ secrets.EMAIL }}
-        source ~/.bashrc  # 确保加载环境变量
-        ls -l /home/runner/.acme.sh/  # 确认安装路径
-        $ACME --install
+        mkdir -p $ACME_DIR
+        curl  https://get.acme.sh | sh -s email=${{ secrets.EMAIL }} --home $ACME_DIR
+        source $ACME_DIR/acme.sh.env
+        ls -l $ACME_DIR
 
     - name: Verify acme.sh installation
       run: |
-        $ACME --version
+        $ACME_DIR/acme.sh --version
 
     - name: Issue & Deploy Certificates
       run: |
         export CF_Account_ID=${{ secrets.CF_ACCOUNT_ID }}
         export CF_Token=${{ secrets.CF_TOKEN }}
+        export ACME=$ACME_DIR/acme.sh
 
         git config --global user.email ${{ secrets.EMAIL }}
         git config --global user.name acme
